TheXTech Changelog.

Changes for 1.3.6
-Random number generation tuned to be more similar to the original VB6 code
-Gameplay can be recorded and played back for speedruns and verification
-Resolutions other than 800x600 (including widescreen) now supported
-Classic level editor added
-Option for SMB3-style world map movement
-Improved performance on large levels using quadtree for blocks

Goals for 1.3.6:
-Support for add/drop players on the fly
-New controller backend and menus
-Implement quadtree for BGOs, NPCs, waters
<wip>

Changes for 1.3.5.2
-Fixed the ARM64 building
-Updated the log writer
-Disabled the "Boss Dead" event hook to stop the episode speed-run timer by default, added the compat.ini options to enable and configure it
-Fixed the unexpected Swooper flap sound played after the Swooper has gone far away
-Fixed the vanilla bug: The Swooper has avoided being started to fly when inactive
-Added the compatibility level command line option separated from the speed-run modes (However, the speed-run mode will still override the compativility level)
-Added an option to enable the background game controller input handling
-Portal warps have been allowed to be used for level entrances and level exits (Instant warps kept unsupported to avoid possible compatibility issues)
-Added the cannon pipes that can shoot the player with a given speed
-Added the workaround for custom background2-42 that has non-multiple 4 height (there are several custom sprites with the 3455 invalid height, they must be 3466)
-Fixed an incorrect speed-run timer render at multiplayer mode
-The controller state print has been replaced with a controller drawing to indicate the pressure state of buttons
-Added the opt-in 2x scale down optimization for all textures to reduce the memory usage
-Fixed the confusion when using the modern section auto-scroll settings when an auto-scroll fix was disabled

Changes for 1.3.5.1